--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <section class="signature-section">
-            <p class="signature">Para ti, con todo mi amor</p>
+            <p class="signature">Para ti, con todo mi amor Jordy</p>
         </section>
     </div>
 
