--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -29,7 +29,7 @@
         <section class="photo-section">
             <div class="photo-container">
                 <div class="photo-frame">
-                    <img src="https://ibb.co/Dc4Tn3v" alt="amor">
+                    <img src="https://i.ibb.co/wGyj1DP/IMG-20250616-WA0081.jpg" alt="amor">
                 </div>
             </div>
             <p class="photo-caption">Eres la luz que ilumina cada uno de mis días</p>
