--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -66,5 +66,5 @@
 <script src="./js/script.js"></script>
 </html>
 </body>
-<audio autoplay>
+<audio controls autoplay>
     <source src="https://drive.google.com/file/d/1iAT66z45j0_q4l4RizKeETn1ojkqeOLN/view?usp=drivesdk" type="audio/mpeg">
