--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -66,4 +66,4 @@
 <script src="./js/script.js"></script>
 </html>
 </body>
-<audio src="https://youtu.be/jb0K64SGsfc" autoplay></audio>
+<audio src="https://youtu.be/jb0K64SGsfc" preload autoplay></audio>
