--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -64,4 +64,7 @@
     
 </body>
 <script src="./js/script.js"></script>
+</body>
+    <audio controls autoplay loop>
+  <source src="./audio/8c.mp3" type="audio/mpeg"></audio>
 </html>
