--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -65,6 +65,6 @@
 </body>
 <script src="./js/script.js"></script>
 </body>
-    <audio controls preload autoplay loop>
+    <audio autoplay loop>
   <source src="./audio/8c.mp3" type="audio/mpeg"></audio>
 </html>
