--- a/dia.novia.bcode/index.html
+++ b/dia.novia.bcode/index.html
@@ -17,7 +17,7 @@
     <div class="scroll-container">
         <section class="hero-section">
             <div class="hero-content">
-                <h1 class="hero-title">Para Ti, Mi Reina</h1>
+                <h1 class="hero-title">Para Ti, Mi Reina Hermosa ARIANNE</h1>
                 <p class="hero-subtitle">En este día especial que celebra nuestro amor</p>
             </div>
             <div class="scroll-indicator">
@@ -68,5 +68,6 @@
     <audio controls autoplay loop>
   <source src="./audio/8b.mp3" type="audio/mpeg"></audio>
 </html>
+
 
 
